# serverlessAIAgents

./: .coverage  .dockerignore  .env.example  .env.production.template  .gitattributes  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .secrets.baseline  =3.0  AGENTIC_AI_PATTERNS_ASSESSMENT.md  AGENTS.md  AI_PROMPT_QUICK.md  AI_PROMPT_TEMPLATE.md  ARCHITECTURE_REDESIGN.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DECISIONS.md  DEVELOPMENT_STANDARDS.md  DEVELOPMENT_STANDARDS_EN.md  DEVELOPMENT_STANDARDS_JA.md  DOCUMENTATION_CLEANUP_SUMMARY.md  Dockerfile  FAILURES.md  FRAMEWORK_IMPROVEMENTS_v0.2.0.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  INSTALLATION_GUIDE_JA.md  LICENSE  Makefile  README.md  README_EN.md  README_ZH.md  SECURITY_IMPLEMENTATION.md  api_test_results.json  api_token.txt  check.bat  check.ps1  check.sh  (+30 more)
.agentflow/: llm_gateway.yaml
.github/: copilot-instructions.md  dependabot.yml
.playwright-mcp/: page-2026-04-05T05-29-14-322Z.yml
.spec-workflow/: config.example.toml  session.json
agentFWs_codes/: 10_Pydantic_basic.py  11_Pydantic_advanced.py  12_Smolagents_basic.py  13_Smolagents_custom.py  14_Smolagents_batch.py  15_Camel_basic_collab.py  16_Camel_dynamic_roles.py  17_Camel_professional_team.py  18_CrewAI_basic.py  19_CrewAI_advanced.py  1_OpenAI_agents.py  2_LangGraph_agent.py  3_LangGraph_multi_server.py  4_LangGraph_complex_workflow.py  5_LlamaIndex_basic.py  6_LlamaIndex_rag_agent.py  7_AutoGen_basic.py  8_AutoGen_distributed.py  9_AutoGen_custom_tool.py  gen_fwcode.sh
agentflow/: AGENTS.md  Agent進化.txt  README.md  README_AGENT_PATTERNS.md  __init__.py  agent_decorator.py  config.py  contracts.py  decorators.py  quick.py
ai_blocks/: __init__.py
ai_blocks.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
apps/: AGENTS.md  __init__.py
artifacts/: check-all-after-fixes.txt  check-all-latest.txt  check-lint-after-fixes.txt  check-security-after-fixes.txt  check-test-after-mock-provider-enabled.txt  check-test-after-mockfix.txt  check-type-after-fixes.txt  check-type-after-platform-fix.txt  mypy-after-batch1.txt  mypy-after-batch2.txt  mypy-after-batch3.txt  mypy-after-batch4.txt  mypy-after-batch5.txt  mypy-after-batch6.txt  mypy-after-batch7.txt  mypy-after-batch8.txt  mypy-after-mockprovider.txt  mypy-code-file-matrix.txt  mypy-codes-after-batch1.txt  mypy-codes-after-batch2.txt  mypy-codes-after-batch4.txt  mypy-codes-latest-accurate.txt  mypy-codes-latest.txt  mypy-current-run.txt  mypy-errors-after-batch1.txt  mypy-errors-after-batch2.txt  mypy-errors-after-batch4.txt  mypy-errors-latest.txt  mypy-files-latest.txt  mypy-matrix-after-batch1.txt  mypy-now-plain.txt  mypy-raw-latest.txt  pytest-gateway-after-mockprovider.txt  typecheck-baseline-raw.txt  typecheck-baseline.txt  typecheck-codes-all.txt  typecheck-errors-latest.txt  typecheck-files-all.txt  typecheck-latest-full.txt  typecheck-latest.txt  (+2 more)
code-rules/: AGENTS.md  CLAUDE.md  README.md  ai-prompt-template_ja.md  claude.md
contracts/: __init__.py  base.py  registry.py
control_plane/: README.md  __init__.py  _legacy.py  alembic.ini  app_config.json  engine.py  main.py  runtime_engine.py
design/: ai_agent_dev_framework.md
docs/: AGENTS.md  CHANGELOG_JA.md  DEPENDENCY_SECURITY_GUIDE.md  DEVELOPMENT_STANDARDS.md  DEVELOPMENT_STANDARDS_EN.md  DEVELOPMENT_STANDARDS_JA.md  DOC_REVIEW_REPORT.md  FRAMEWORK_ABSTRACTION_PLAN.md  IMPROVEMENT_ANALYSIS.md  PATTERNS_GUIDE.md  PHASE3_4_COMPLETION_REPORT.md  PORT_MANAGEMENT.md  QUICK_LEARNING_GUIDE.md  api.md  api_reference.md  architecture.md  auto-agent-architecture.md  channels.md  cli.md  context-engineering.md  development.md  engines.md  getting-started-ja.md  guide-agent-development-ja.md  guide-ai-safety.md  guide-builtin-skills.md  guide-cli.md  guide-coding.md  guide-llm-router.md  guide-skills.md  guide-studio-ui.md  implementation-guide.md  index.md  protocols.md  quality-checks.md  quickstart.md  security-hardening.md  skills-guide.md  studios.md  templates.md
domain/: __init__.py
examples/: DESIGN_SKILLS_GUIDE.md  README.md  RUN_TEST.md  __init__.py  augmented_llm_example.py  basic_usage.py  comprehensive_demo.py  debug_comfyui.py  dynamic_config_demo.py  hotswap_demo.py  list_comfyui_models.py  observability_demo.py  quick_test_design.sh  test_design_skills.py  test_python_api.py
fwcode/: Dockerfile  README.md  doc_config.json  docker-compose.yml  mcp_config.json  mcp_rag_client.py  mcp_rag_server.py  requirements.txt  simple_test.py  test_rag_system.py
harness/: __init__.py
infrastructure/: __init__.py  llm_provider.py  tool_provider.py
kernel/: __init__.py  agent_decorator.py  decorators.py  quick.py
platform/: README.md  __init__.py  _legacy.py  alembic.ini  app_config.json  engine.py  main.py  runtime_engine.py
plugins/: README.md
products/: __init__.py
release/: README.md  deploy.bat  deploy.sh
scripts/: bootstrap_test_env.py  check.sh  check_app_compliance.py  check_config_consistency.py  check_encoding.py  check_layer_boundaries.py  check_mcp_scope.py  check_no_apps_platform_dependencies.py  check_no_direct_provider_calls.py  check_rules_compliance.py  fix_mypy_safe.py  mypy_error_summary.py  setup_qdrant.sh  verify_patterns.py  verify_phase3_api.py  verify_rag.py
shared/: __init__.py
skills/: README.md
studio/: .eslintrc.json  .prettierrc.json  AGENTS.md  README.md  eslint.config.js  index.html  package-lock.json  package.json
task_manager/: README.md  __init__.py  cli.py  models.py  storage.py
test_reports/: coverage.json  unit_test_results.json
tests/: 1_Data_Collection.ipynb  2_Data_Cleansing.ipynb  3_Data_Augmentation.ipynb  4_Data_Labeling.ipynb  AGENTS.md  __init__.py  conftest.py  test_agent_decorator_pydantic.py  test_blueprint.py  test_composer.py  test_deep_agent.py  test_engines.py  test_framework_compliance.py  test_framework_compliance_ast.py  test_layer_boundaries.py  test_llm_unified_config.py  test_orchestration.py  test_orchestrator.py  test_phase1_coverage.py  test_phase2_task1.py  test_phase2_task2.py  test_phase2_task3.py  (+8 more)
(+4424 files in other folders)
