[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentflow"
version = "1.14.3"
description = "Lightweight AI Agent development framework with MCP/A2A/AG-UI protocol support"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "AgentFlow Team", email = "team@agentflow.dev" }
]
keywords = ["ai", "agent", "mcp", "a2a", "ag-ui", "workflow", "llm"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    # Core workflow engine
    "pocketflow>=0.0.3",

    # Database drivers
    "asyncpg>=0.29.0",      # PostgreSQL async driver (required for SQLAlchemy async)

    # Protocol SDKs
    "mcp>=1.0.0",           # MCP protocol (requires Python 3.10+)
    "python-a2a>=0.5.0",    # A2A protocol (requires Python 3.9+)
    "adk-agui-middleware>=0.1.0",  # AG-UI protocol (requires Python 3.13+)

    # Data validation and serialization
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0",

    # Async I/O
    "aiofiles>=23.0.0",
    "httpx>=0.27.0",

    # CLI
    "click>=8.1.0",
    "rich>=13.0.0",
    "jinja2>=3.1.0",

    # Logging
    "structlog>=24.0.0",
]

[project.urls]
Homepage = "https://github.com/liushuang393/serverlessAIAgents"
Documentation = "https://github.com/liushuang393/serverlessAIAgents/blob/main/README.md"
Repository = "https://github.com/liushuang393/serverlessAIAgents"
Issues = "https://github.com/liushuang393/serverlessAIAgents/issues"
Changelog = "https://github.com/liushuang393/serverlessAIAgents/blob/main/CHANGELOG.md"

[project.optional-dependencies]
studio = [
    # Web server
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "websockets>=13.0",
]

# Memvid長期知識記憶（高性能RAG）
memvid = [
    "memvid-sdk>=2.0.0",  # Rust製高性能RAGライブラリ（Python SDK）
]

dev = [
    # Testing
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-watch>=4.2.0",

    # Type checking
    "mypy>=1.8.0",
    "types-pyyaml",
    "types-aiofiles",

    # Linting and formatting
    "ruff>=0.2.0",

    # Pre-commit hooks
    "pre-commit>=3.6.0",

    # Security
    "detect-secrets>=1.5.0",
]

docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
]

all = [
    "agentflow[dev,docs,memvid]",
]

[project.scripts]
agentflow = "agentflow.cli.main:cli"

# ============================================================================
# Ruff Configuration
# ============================================================================
[tool.ruff]
line-length = 100
target-version = "py313"
src = ["agentflow", "tests"]
extend-exclude = [
    ".venv",
    "venv",
    "__pycache__",
    "*.egg-info",
    ".pytest_cache",
    ".mypy_cache",
    ".ruff_cache",
    "agentflow/templates/**/*.py",  # Jinja2 template files
]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "ANN",   # flake8-annotations
    "ASYNC", # flake8-async
    "B",     # flake8-bugbear
    "A",     # flake8-builtins
    "C4",    # flake8-comprehensions
    "DTZ",   # flake8-datetimez
    "T10",   # flake8-debugger
    "EM",    # flake8-errmsg
    "ISC",   # flake8-implicit-str-concat
    "ICN",   # flake8-import-conventions
    "PIE",   # flake8-pie
    "PT",    # flake8-pytest-style
    "Q",     # flake8-quotes
    "RSE",   # flake8-raise
    "RET",   # flake8-return
    "SIM",   # flake8-simplify
    "TID",   # flake8-tidy-imports
    "TCH",   # flake8-type-checking
    "ARG",   # flake8-unused-arguments
    "PTH",   # flake8-use-pathlib
    "ERA",   # eradicate
    "PL",    # pylint
    "TRY",   # tryceratops
    "RUF",   # ruff-specific rules
]

ignore = [
    "ANN101",  # Missing type annotation for self in method
    "ANN102",  # Missing type annotation for cls in classmethod
    "ANN401",  # Dynamically typed expressions (Any) are disallowed
    "TRY003",  # Avoid specifying long messages outside the exception class
    "PLR0913", # Too many arguments to function call
    "ASYNC109", # Async function with timeout parameter (needed for API compatibility)
    "RUF200",  # Failed to parse pyproject.toml (false positive)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "ANN",     # Type annotations not required in tests
    "ARG",     # Unused arguments OK in fixtures
    "PLR2004", # Magic values OK in tests
    "ERA001",  # Commented-out code OK in tests
    "PLC0415", # Import at top-level not required in tests
    "PTH123",  # Path.open() not required in tests
]
"__init__.py" = [
    "F401",    # Unused imports OK in __init__.py
]
"agentflow/templates/**/*.py" = [
    "ALL",     # Template files - ignore all rules
]
"agentflow/studio/*.py" = [
    "ERA001",  # Commented-out code OK in studio (demo/prototype code)
    "PLC0415", # Import at top-level not required in studio
    "PTH123",  # Path.open() not required in studio
    "ASYNC230", # Blocking open OK in studio (demo code)
    "PLR0915", # Too many statements OK in studio
    "ARG001",  # Unused arguments OK in studio (API compatibility)
    "ANN202",  # Missing return type annotation OK in studio
    "TRY300",  # Try-else OK in studio
    "B904",    # Raise without from OK in studio
]
"agentflow/cli/**/*.py" = [
    "PLR0912", # Too many branches OK in CLI
    "PLR0915", # Too many statements OK in CLI
    "TRY301",  # Raise within try OK in CLI
]
"agentflow/core/agent_block.py" = [
    "PLC0415", # Import at top-level not required (circular import)
]
"agentflow/studio/server.py" = [
    "PLC0415", # Import at top-level not required (CLI entry point)
]
"fix_code_issues.py" = [
    "ALL",     # Temporary script - ignore all rules
]

[tool.ruff.lint.isort]
known-first-party = ["agentflow"]
force-single-line = false
lines-after-imports = 2

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

# ============================================================================
# Mypy Configuration
# ============================================================================
[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = false
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
exclude = [
    "agentflow/templates/",  # Jinja2 template files
]
show_error_codes = true
show_column_numbers = true
pretty = true

# Allow some flexibility for third-party libraries
[[tool.mypy.overrides]]
module = [
    "pocketflow.*",
    "mcp.*",
    "python_a2a.*",
    "adk_agui_middleware.*",
]
ignore_missing_imports = true

# ============================================================================
# Pytest Configuration
# ============================================================================
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=agentflow",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-fail-under=80",
    "-v",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests",
    "slow: Slow tests",
]

# ============================================================================
# Coverage Configuration
# ============================================================================
[tool.coverage.run]
source = ["agentflow"]
omit = [
    "*/tests/*",
    "*/__init__.py",
    "*/cli/*",  # CLI code is harder to test
]
branch = true

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "@overload",
]

# ============================================================================
# Hatch Configuration
# ============================================================================
[tool.hatch.build.targets.wheel]
packages = ["agentflow"]

[tool.hatch.build.targets.sdist]
include = [
    "/agentflow",
    "/tests",
    "/README.md",
    "/LICENSE",
    "/pyproject.toml",
]
