[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentflow"
version = "2.0.0"
description = "Lightweight AI Agent development framework with MCP/A2A/AG-UI protocol support"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "AgentFlow Team", email = "team@agentflow.dev" }
]
keywords = ["ai", "agent", "mcp", "a2a", "ag-ui", "workflow", "llm"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    # Core workflow engine
    "pocketflow>=0.0.3",

    # Database drivers
    "asyncpg>=0.29.0",      # PostgreSQL async driver (required for SQLAlchemy async)

    # Protocol SDKs
    "mcp>=1.0.0",           # MCP protocol (requires Python 3.10+)
    "python-a2a>=0.5.0",    # A2A protocol (requires Python 3.9+)
    "adk-agui-middleware>=0.1.0",  # AG-UI protocol (requires Python 3.13+)

    # Data validation and serialization
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0",
    "cryptography>=43.0.0",

    # Async I/O
    "aiofiles>=23.0.0",
    "httpx>=0.27.0",

    # CLI
    "click>=8.1.0",
    "rich>=13.0.0",
    "jinja2>=3.1.0",

    # Logging
    "structlog>=24.0.0",
]

[project.urls]
Homepage = "https://github.com/liushuang393/serverlessAIAgents"
Documentation = "https://github.com/liushuang393/serverlessAIAgents/blob/main/README.md"
Repository = "https://github.com/liushuang393/serverlessAIAgents"
Issues = "https://github.com/liushuang393/serverlessAIAgents/issues"
Changelog = "https://github.com/liushuang393/serverlessAIAgents/blob/main/CHANGELOG.md"

[project.optional-dependencies]
studio = [
    # Web server
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "websockets>=13.0",
]

# Sample applications dependencies
apps = [
    # Web framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "websockets>=12.0",

    # Database
    "sqlalchemy>=2.0.25",
    "alembic>=1.13.1",
    "aiosqlite>=0.19.0",

    # Data processing
    "python-dateutil>=2.8.2",
    "feedparser>=6.0.11",

    # Scheduling
    "apscheduler>=3.10.4",

    # HTTP client
    "aiohttp>=3.9.1",

    # Utilities
    "python-dotenv>=1.0.0",
    "reportlab>=4.0.0",  # For PDF generation in decision_governance_engine

    # Platform-specific
    "python-telegram-bot>=20.0",  # For messaging_hub
    "slack-sdk>=3.0",              # For messaging_hub
    "discord.py>=2.0",             # For messaging_hub
]

# Memvid長期知識記憶（高性能RAG）
memvid = [
    "memvid-sdk>=2.0.0",  # Rust製高性能RAGライブラリ（Python SDK）
]

dev = [
    # Testing
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-watch>=4.2.0",

    # Type checking
    "mypy>=1.8.0",
    "types-pyyaml",
    "types-aiofiles",

    # Linting and formatting
    "ruff>=0.2.0",

    # Pre-commit hooks
    "pre-commit>=3.6.0",

    # Security
    "detect-secrets>=1.5.0",
    "bandit>=1.7.0",
]

docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
]

all = [
    "agentflow[dev,docs,memvid,apps]",
]

[project.scripts]
agentflow = "agentflow.cli.main:cli"

# ============================================================================
# Ruff Configuration
# ============================================================================
[tool.ruff]
line-length = 120
target-version = "py313"
src = ["agentflow", "tests"]
extend-exclude = [
    ".venv",
    "venv",
    "__pycache__",
    "*.egg-info",
    ".pytest_cache",
    ".mypy_cache",
    ".ruff_cache",
    "agentflow/templates/**/*.py",  # Jinja2 template files
]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "ANN",   # flake8-annotations
    "ASYNC", # flake8-async
    "B",     # flake8-bugbear
    "A",     # flake8-builtins
    "C4",    # flake8-comprehensions
    "DTZ",   # flake8-datetimez
    "T10",   # flake8-debugger
    "EM",    # flake8-errmsg
    "ISC",   # flake8-implicit-str-concat
    "ICN",   # flake8-import-conventions
    "PIE",   # flake8-pie
    "PT",    # flake8-pytest-style
    "Q",     # flake8-quotes
    "RSE",   # flake8-raise
    "RET",   # flake8-return
    "SIM",   # flake8-simplify
    "TID",   # flake8-tidy-imports
    "TCH",   # flake8-type-checking
    "ARG",   # flake8-unused-arguments
    "PTH",   # flake8-use-pathlib
    "ERA",   # eradicate
    "PL",    # pylint
    "TRY",   # tryceratops
    "RUF",   # ruff-specific rules
]

ignore = [
    # ANN101/ANN102 は ruff から削除済み（指定すると警告が出る）
    "ANN401",  # Dynamically typed expressions (Any) are disallowed
    "TRY003",  # Avoid specifying long messages outside the exception class
    "PLR0913", # Too many arguments to function call
    "ASYNC109", # Async function with timeout parameter (needed for API compatibility)
    "RUF200",  # Failed to parse pyproject.toml (false positive)
    # 日本語コードベース: 全角括弧（）は意図的な日本語表記
    "RUF001",  # String contains ambiguous full-width characters (Japanese)
    "RUF002",  # Docstring contains ambiguous full-width characters (Japanese)
    "RUF003",  # Comment contains ambiguous full-width characters (Japanese)
    # コードベース全体で意図的なパターン
    "ERA001",  # Commented-out code: 代替実装・例示コードとして意図的に使用
    # datetime タイムゾーン: ロギング・内部処理では UTC 必須ではない
    "DTZ005",  # datetime.now() without tz - acceptable in internal/logging contexts
    "DTZ003",  # datetime.utcnow() - legacy pattern in tests and tools
    # ロギングパターン: verbose logging は acceptable な実装パターン
    "TRY401",  # verbose-log-message: logger.error(exc) pattern is OK
    # ClassVar アノテーション: Pydantic/dataclass との互換性のため
    "RUF012",  # mutable-class-attributes-annotations: ClassVar annotation not always needed
    # FastAPI Depends() パターン: デフォルト引数での関数呼び出しは意図的
    "B008",    # function-call-in-default-argument: FastAPI Depends() is intentional
    # global 文: モジュールレベルの状態管理に必要な場合がある
    "PLW0603", # global-statement: sometimes necessary for module-level state
    # 複雑な関数: AIフレームワークでは複雑な処理フローが必要
    "PLR0912", # too-many-branches: complex AI logic requires many branches
    "PLR0915", # too-many-statements: complex AI orchestration functions
    "PLR0911", # too-many-return-statements: multiple exit paths in handlers
    # コードスタイル: チームの判断に委ねる
    "SIM102",  # collapsible-if: nested if is sometimes more readable
    "TRY301",  # raise-within-try: acceptable pattern for early exits
    "PTH123",  # builtin-open: open() vs Path.open() is style preference
    "E402",    # module-import-not-at-top: conditional/lazy imports are intentional
    # datetime: 内部処理では tz 不要な場合がある
    "DTZ001",  # datetime-constructor-without-tz
    "DTZ011",  # datetime-date-today
    # 関数名規約: テストフレームワーク・レガシーコードとの互換性
    "N802",    # invalid-function-name: some legacy function names are accepted
    # ASYNC: ブロッキング処理は一部コンテキストで許容
    "ASYNC230", # async-blocking-io: not always avoidable
    # API 互換性: built-in 名は API の引数として一般的
    "A002",    # builtin-argument-shadowing: 'type', 'input' etc. are common API params
    # コードスタイル: チームの判断に委ねる
    "SIM108",  # if-else-block-instead-of-if-exp: ternary is not always more readable
    # テスト: pytest スタイルの選択は柔軟
    "PT011",   # pytest.raises-without-match: not always necessary to match
    # subprocess: check パラメータは必須ではない場合がある
    "PLW1510", # subprocess-run-without-check: some commands may not need check
    # 行長: PDF 生成などの特殊用途では長い行が発生する
    "E501",    # line-too-long: unavoidable in some generated/PDF code contexts
    # 変数名: l/O/I は日本語コードベースの慣習的パターン
    "E741",    # ambiguous-variable-name: `l` used in list comprehensions is acceptable
    # 型チェック
    "E721",    # type-comparison: isinstance() preferred but type() acceptable
    "ANN201",  # missing-return-type: not strictly required in all contexts
    # 例外クラス命名: レガシーコードとの互換性
    "N818",    # error-suffix-on-exception-name: some exceptions have legacy names
    # 例外処理パターン
    "TRY004",  # prefer-type-error: legacy exception patterns
    # 抽象クラス
    "B024",    # abstract-base-class-without-abstract-method: some ABCs are structural
    # パッケージ利用可能性チェック: 動的インポートで SDK 確認
    "PLR2004", # magic-value-comparison: numeric comparisons are often self-documenting
    # ループ変数
    "PLW2901", # redefined-loop-name: sometimes necessary in processing pipelines
    # try-else パターン
    "TRY300",  # try-consider-else: acceptable not to use else block
    "TRY002",  # raise-vanilla-class: generic exceptions acceptable in some contexts
    # Path 操作: os.path と pathlib は混在してよい
    "PTH109",  # os-getcwd: Path.cwd() not required
    "PTH118",  # os-path-join: Path / operator not required
    "PTH110",  # os-path-exists: Path.exists() not required
    # 日本語変数名: AI タスク説明等に非ASCII文字を含む場合がある
    "PLC2401", # non-ascii-name: Japanese variable names are acceptable
    # ASYNC: サブプロセス実行は非同期でも許容
    "ASYNC221", # async-blocking-io: subprocess in async acceptable
    # グローバル読み取り: グローバルスコープの読み取りは宣言不要
    "PLW0602", # global-not-assigned: global for reading is acceptable
    # datetime
    "DTZ006",  # call-datetime-fromtimestamp-without-tz: internal timestamps
    "DTZ901",  # datetime-min-without-tz: sentinel values don't need tz
    # asyncio.create_task: タスク参照の保持は必ずしも必要ではない
    "RUF006",  # asyncio-dangling-task: fire-and-forget tasks are acceptable
    # 変数名・命名
    "A001",    # builtin-variable-shadowing: common in API code (id, type)
    "A003",    # builtin-attribute-shadowing: method names like `list` in classes
    "A004",    # builtin-import-shadowing: some imports shadow built-ins intentionally
    "N817",    # camelcase-imported-as-acronym: sometimes acronyms are appropriate
    # その他のコードスタイル
    "PLC0206", # dict-index-missing-items: key-only access is valid
    "RUF034",  # useless-if-else: some patterns are more explicit this way
    "RUF059",  # unused-unpacked-variable: some unpacked vars are intentionally ignored
    "B007",    # unused-loop-control-variable: sometimes needed for loop structure
    "ANN001",  # missing-type-annotation: not all params need annotations
    "ANN204",  # missing-return-type-special-method: __iter__ etc. don't always need it
    "ARG004",  # unused-static-method-argument: acceptable in protocol implementations
    "F402",    # import-shadowed-by-loop-var: acceptable in comprehension patterns
    "ANN002",  # missing-type-annotation-args: *args not always annotated
    "ANN003",  # already in agentflow/** but missing from global
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "ANN",     # Type annotations not required in tests
    "ARG",     # Unused arguments OK in fixtures
    "PLR2004", # Magic values OK in tests
    "ERA001",  # Commented-out code OK in tests
    "PLC0415", # Import at top-level not required in tests
    "PTH123",  # Path.open() not required in tests
    "PT009",   # pytest assertion style: unittest-style OK in tests
]
"apps/**/*.py" = [
    "PLC0415", # Lazy imports OK in apps (circular dep avoidance)
    "PLR2004", # Magic values OK in app code
    "ANN",     # Type annotations not strictly required in app layer
    "TRY300",  # Try-else pattern OK in apps
    "B904",    # Raise without from OK in apps
    "TRY301",  # Raise within try OK in apps
    "ARG001",  # Unused function arguments OK in API callbacks
    "ARG002",  # Unused method arguments OK in API callbacks
]
"apps/**/tests/**/*.py" = [
    "PT009",   # pytest assertion style: unittest-style OK in tests
    "PLR2004", # Magic values OK in tests
]
"__init__.py" = [
    "F401",    # Unused imports OK in __init__.py
]
"agentflow/templates/**/*.py" = [
    "ALL",     # Template files - ignore all rules
]
"agentflow/studio/*.py" = [
    "ERA001",  # Commented-out code OK in studio (demo/prototype code)
    "PLC0415", # Import at top-level not required in studio
    "PTH123",  # Path.open() not required in studio
    "ASYNC230", # Blocking open OK in studio (demo code)
    "PLR0915", # Too many statements OK in studio
    "ARG001",  # Unused arguments OK in studio (API compatibility)
    "ANN202",  # Missing return type annotation OK in studio
    "TRY300",  # Try-else OK in studio
    "B904",    # Raise without from OK in studio
]
"agentflow/cli/**/*.py" = [
    "PLR0912", # Too many branches OK in CLI
    "PLR0915", # Too many statements OK in CLI
    "TRY301",  # Raise within try OK in CLI
]
"agentflow/**/*.py" = [
    "PLC0415", # Lazy imports throughout framework (circular dep avoidance)
    "TRY300",  # Try-else pattern not required in framework code
    "B904",    # Raise without from: exception chaining optional in framework
    "ARG002",  # Unused method arguments: common in abstract base classes and callbacks
    "ARG001",  # Unused function arguments: common in event handlers and API callbacks
    "PLR2004", # Magic values: acceptable in framework internals
    "ANN202",  # Missing return type annotation: not strictly required in framework
    "ANN003",  # Missing **kwargs type annotation: dynamic APIs don't always need it
    "PTH123",  # builtin-open vs Path.open: open() is fine in framework code
    "PLW2901", # Redefined loop variable: acceptable in some processing patterns
]
"agentflow/core/agent_block.py" = [
    "PLC0415", # Import at top-level not required (circular import)
]
"agentflow/core/tool_catalog.py" = [
    "PLC0415", # Lazy imports to avoid circular dependencies and reduce startup overhead
]
"agentflow/studio/server.py" = [
    "PLC0415", # Import at top-level not required (CLI entry point)
]
# SDK 利用可能性チェック: try ブロック内で SDK の存在確認
"agentflow/sandbox/e2b_provider.py" = ["F401"]
"agentflow/sandbox/microsandbox_provider.py" = ["F401"]
"agentflow/skills/pdf_export.py" = ["F401"]
"agentflow/knowledge/reranker.py" = ["F401"]
"agentflow/integrations/websocket_integration.py" = ["F401"]
"agentflow/services/document_exporter.py" = ["F401"]
"apps/code_migration_assistant/mcp_tools/pdf_exporter.py" = ["F401", "PLC0415"]
"apps/decision_governance_engine/services/pdf_generator.py" = ["F401"]
"apps/market_trend_monitor/backend/services/report_export_service.py" = ["F401"]
"tests/integration/test_llm_tool_calling.py" = ["F401", "PLC0415"]
"tests/unit/test_messaging_features.py" = ["F401"]
"examples/**/*.py" = ["F401", "PLC0415", "ANN", "ARG"]
"fix_code_issues.py" = [
    "ALL",     # Temporary script - ignore all rules
]
"tests/unit/test_deep_agent.py" = [
    "F821",    # DynamicAgent/Evolver/ConversationManager は deep_agent.py にありパッケージでシャドウされる
]

[tool.ruff.lint.isort]
known-first-party = ["agentflow"]
force-single-line = false
lines-after-imports = 2

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

# ============================================================================
# Mypy Configuration
# ============================================================================
[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = false
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
exclude = [
    "agentflow/templates/",  # Jinja2 template files
    # ハイフン入りディレクトリ名（不正Pythonパッケージ名 - mypy がパースできない）
    "agentflow/skills/builtin/auth-provider/",
    "agentflow/skills/builtin/database-manager/",
    "agentflow/skills/builtin/db-migration/",
    "agentflow/skills/builtin/deployment-manager/",
    "agentflow/skills/builtin/market-trend-analysis/",
    "agentflow/skills/builtin/app-builder/",
    "agentflow/skills/builtin/app-development-flow/",
    "agentflow/skills/builtin/stripe-payment/",
]
show_error_codes = true
show_column_numbers = true
pretty = true

# Allow some flexibility for third-party libraries
[[tool.mypy.overrides]]
module = [
    "pocketflow.*",
    "mcp.*",
    "python_a2a.*",
    "adk_agui_middleware.*",
]
ignore_missing_imports = true

# ============================================================================
# Pytest Configuration
# ============================================================================
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=agentflow",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-fail-under=80",
    "-v",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests",
    "real_llm: Opt-in tests that call real LLM providers",
    "slow: Slow tests",
]

# ============================================================================
# Coverage Configuration
# ============================================================================
[tool.coverage.run]
source = ["agentflow"]
omit = [
    "*/tests/*",
    "*/__init__.py",
    "*/cli/*",  # CLI code is harder to test
]
branch = true

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "@overload",
]

# ============================================================================
# Bandit Configuration (Python SAST)
# ============================================================================
[tool.bandit]
exclude_dirs = ["tests", ".venv", "venv", "studio", "node_modules"]
skips = ["B101"]  # assert 文（テストで多用）

[tool.bandit.assert_used]
skips = ["*_test.py", "test_*.py"]

# ============================================================================
# Hatch Configuration
# ============================================================================
[tool.hatch.build.targets.wheel]
packages = ["agentflow"]

[tool.hatch.build.targets.sdist]
include = [
    "/agentflow",
    "/tests",
    "/README.md",
    "/LICENSE",
    "/pyproject.toml",
]
